--- a/package.json
+++ b/package.json
@@ -53,7 +53,11 @@
     "citty": "0.1.6",
     "consola": "3.4.2",
     "giget": "2.0.0",
-    "pkg-types": "2.1.0"
+    "nypm": "0.6.0",
+    "pathe": "2.0.3",
+    "pkg-types": "2.1.0",
+    "std-env": "3.9.0",
+    "tinyexec": "1.0.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
