--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-xeiculy-app",
+  "name": "create-xeiculy-nuxt-app",
   "type": "module",
   "version": "0.1.0",
   "packageManager": "pnpm@10.10.0",
@@ -26,7 +26,7 @@
   "main": "./dist/index.mjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "files": ["bin", "dist"],
+  "files": ["bin", "dist", "templates"],
   "bin": {
     "create-xeiculy-nuxt-app": "./bin/cli.mjs"
   },
